@@ -48,6 +48,10 @@ void nautilus_directory_notify_files_moved   (GList *file_pairs);
 void nautilus_directory_notify_files_changed (GList *files);
 void nautilus_directory_notify_files_removed (GList *files);
 
+void nautilus_directory_schedule_metadata_copy   (GList        *file_pairs);
+void nautilus_directory_schedule_metadata_move   (GList        *file_pairs);
+void nautilus_directory_schedule_metadata_remove (GList        *files);
+
 /* Deprecated URI versions: to be converted */
 void nautilus_directory_notify_files_added_by_uri      (GList        *uris);
 void nautilus_directory_notify_files_changed_by_uri    (GList        *uris);
