@@ -2,6 +2,12 @@
 
         * libnautilus-private/nautilus-directory-notify.h:
         * libnautilus-private/nautilus-directory.c:
+	Add GFile versions of metadata scheduling functions.
+
+2007-09-20  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-directory-notify.h:
+        * libnautilus-private/nautilus-directory.c:
 	Add GFile versions:
          nautilus_directory_notify_files_changed
          nautilus_directory_notify_files_removed
